force-app/main/default/objects/FieloCRUD__RelatedDetailsFields__c/FieloCRUD__RelatedDetailsFields__c.object-meta.xml
<CustomObject>
    <label>Related Detail Field</label>
    <nameField>
        <displayFormat>RDF-{0000}</displayFormat>
        <label>Related Details Fields #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Details Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>