force-app/main/default/objects/FieloCRUD__RelatedDetailsFields__c/fields/FieloCRUD__FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__FieldAPIName__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>