force-app/main/default/objects/FieloCRUD__RelatedDetailsFields__c/fields/FieloCRUD__ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>