force-app/main/default/objects/FieloCRUD__RelatedDetailsFields__c/fields/FieloCRUD__RelatedDetailComponent__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__RelatedDetailComponent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Detail Component</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FieloCRUD__PageComponent__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>RelatedDetails</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FieloCRUD__PageComponent__c</referenceTo>
    <relationshipName>Related_Details_Fields</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>