force-app/main/default/objects/FieloCRUD__RelatedDetailsFields__c/recordTypes/FieloCRUD__StandardField.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__StandardField</fullName>
    <active>true</active>
    <description>Define a field that is going to be displayed in the Related Detail input table.</description>
    <label>Standard Field</label>
</RecordType>